--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         <div class="slider marg">
             <div class="fotorama">
                 <img src="img/IMG_6362.JPG" >
-                <img src="img/IMG_0988N.JPG" >
-                <img src="img/IMG_0683N.JPG">
-                <img src="img/IMG_0686N.JPG" >
-                <img src="img/IMG_0694N.JPG" >
+                <img src="img/IMG_0988.JPG" >
+                <img src="img/IMG_0683.JPG">
+                <img src="img/IMG_0686.JPG" >
+                <img src="img/IMG_0694.JPG" >
             </div>
             <!-- Start price-->
             <div class="price marg">AED 15,000.00</div>
